# tick-predict

./: .gitignore  README.md  pyproject.toml
src/: arima.ipynb
src/data/: 20240124_GSK.L_5y.csv  20240124_TBIL_max.csv
